draft for more evaluation

--- a/plotting.ipynb
+++ b/plotting.ipynb
@@ -11,7 +11,6 @@
    "cell_type": "code",
    "source": [
     "import pandas as pd\n",
-    "from datetime import datetime\n",
     "import numpy as np\n",
     "from matplotlib import pyplot as plt"
    ],
@@ -28,15 +27,9 @@
   {
    "metadata": {},
    "cell_type": "code",
-   "source": "df = pd.read_csv(\"logs.csv\", sep=\",\")",
-   "id": "73db47127ebddf4b",
-   "outputs": [],
-   "execution_count": null
-  },
-  {
-   "metadata": {},
-   "cell_type": "code",
    "source": [
+    "df = pd.read_csv(\"logs.csv\", sep=\",\")\n",
+    "\n",
     "df[\"Door_open\"] = df[\"Door\"]==\"open\"\n",
     "df[\"Door_ajar\"] = df[\"Door\"]==\"ajar\"\n",
     "df.drop(columns=[\"Door\"], axis=1, inplace=True)\n",
@@ -44,7 +37,7 @@
     "\n",
     "df[\"Alarm level\"] = df[\"Alarm level\"].map(lambda x: int(x[:1]))"
    ],
-   "id": "df0e66ca8b93afe6",
+   "id": "73db47127ebddf4b",
    "outputs": [],
    "execution_count": null
   },
@@ -59,7 +52,7 @@
   {
    "metadata": {},
    "cell_type": "markdown",
-   "source": "## Plot ajar door",
+   "source": "## ajar door",
    "id": "b143bd09d61e83a6"
   },
   {
@@ -78,7 +71,22 @@
     "\n",
     "beginnings = np.zeros((len(ajar_df)))\n",
     "beginnings[idx] = 1\n",
-    "ajar_df[\"Door_ajar_start\"] = beginnings\n",
+    "ajar_df[\"Door_ajar_start\"] = beginnings"
+   ],
+   "id": "40117bdfff0e1a1a",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "### Plot",
+   "id": "8a9e53e03406d56d"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": [
     "\n",
     "plt.figure(figsize=(10,10))\n",
     "ax = ajar_df.plot(\"t\", \"Door_ajar_start\")\n",
@@ -99,9 +107,16 @@
    "cell_type": "code",
    "source": [
     "tmp = ajar_df.copy()\n",
-    "tmp[\"t\"] = ajar_df[\"t\"].apply(lambda t: t.day)\n",
+    "tmp[\"t\"] = ajar_df[\"t\"].apply(lambda t: (t.month, t.day))\n",
     "tmp = tmp.groupby(\"t\")[\"Door_ajar_start\"].sum()\n",
-    "print(tmp)"
+    "\n",
+    "tmp.plot(kind=\"bar\", label=\"Alarm triggered\")\n",
+    "plt.xlabel(\"Month, Day\")\n",
+    "plt.ylabel(\"sum of occurrences\")\n",
+    "plt.title(\"Occurrences per Day\")\n",
+    "plt.axhline(tmp.mean(), linestyle=\"--\", color=\"r\", label=\"mean\")\n",
+    "plt.legend()\n",
+    "plt.show()"
    ],
    "id": "de17090310544c2c",
    "outputs": [],
